build assets setup

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "dibi/dibi": "^5.0",
+        "dikki/dotenv": "^2.0",
         "laminas/laminas-diactoros": "^3.5",
         "laminas/laminas-httphandlerrunner": "^2.11",
         "league/container": "^4.2",
